# MixMaid

./: README.md
MixMaid_v9/: CMakeLists.txt  README.md
MixMaid_v9/Presets/: EDM Punch.mmix  Master Bus Safe.mmix  Podcast Focus.mmix  Universal.mmix
MixMaid_v9/Shared/Analysis/: AnalyzerState.cpp  AnalyzerState.h  ReferenceMatcher.cpp  ReferenceMatcher.h
MixMaid_v9/Shared/Core/: ABState.cpp  ABState.h  PresetBank.cpp  PresetBank.h
MixMaid_v9/Shared/DSP/: SafetyLimiter.cpp  SafetyLimiter.h  SmartBands.cpp  SmartBands.h
MixMaid_v9/Source/: PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h
MixMaid_v9/docs/: DARPA_AUDIT_REPORT.md  IMPLEMENTATION_STATUS.md  SHIP_CHECKLIST.md  V6_RELEASE_NOTES.md  V8_RELEASE_NOTES.md  V9_RELEASE_NOTES.md
